--- a/web/css/site.css
+++ b/web/css/site.css
@@ -98,6 +98,14 @@ a.desc:after {
     overflow: hidden;
     width: 30px;
 }
+.user-profile-pic{
+    border-radius: 100px;
+    display: inline-block;
+    float: left;
+    height: 150px;
+    overflow: hidden;
+    width: 150px;
+}
 
 .navbar{
   vertical-align: middle;
