Se agregan validaciones a las acciones. y el css para ver el formulario completo

--- a/web/css/webarch/webarch.css
+++ b/web/css/webarch/webarch.css
@@ -3886,9 +3886,9 @@ form legend,
   line-height: 0;
 }
 .form-horizontal {
-  display: inline-block;
+  /* display: inline-block;*/
   margin-right: 10px;
-  position: relative;
+   position: relative;
   top: -4px;
 }
 .form-horizontal.form-bordered .control-group {
