--- a/web/css/site.css
+++ b/web/css/site.css
@@ -104,7 +104,7 @@ a.desc:after {
     float: left;
     height: auto;
     overflow: hidden;
-    max-width: 150px;
+    /*max-width: 150px;*/
 }
 
 .navbar{
