Se confirman cambios varios en la publicaciòn de contenidos.
Renderizados en las ventanas cuando se comentan, vista para los comentarios en el modal emergente. Se estandarizan las variables usadas para los widgets. Se crea un campo para que los contenidos que publican todo el personal no tenga necesidad de seleccionar un área de influencia ni una ciudad.

--- a/web/css/site.css
+++ b/web/css/site.css
@@ -110,3 +110,10 @@ a.desc:after {
 .navbar{
   vertical-align: middle;
 }
+
+
+img.ajustada {
+   display: block;
+   margin: auto;
+   max-width: 100%;
+}
