--- a/web/libs/webarch/webarch.css
+++ b/web/libs/webarch/webarch.css
@@ -7933,7 +7933,8 @@ input[type="checkbox"] {
   text-align: right;
 }
 .cbp_tmtimeline > li .cbp_tmtime .date {
-  font-size: 1.2em;
+  font-size: 0.9em;
+  line-height: 15px;
   color: #505458;
   margin-bottom: 5px;
   display: block;
