--- a/web/libs/webarch/webarch.css
+++ b/web/libs/webarch/webarch.css
@@ -10183,3 +10183,7 @@ input[type=radio]:not(old):checked + label > span > span{
 .buton-check p{text-align: center;}
 .buton-check:hover {background-color:rgb(45, 114, 155);cursor:pointer;}
 label {cursor:pointer;}
+
+.user-profile img {
+    border: 3px solid #F2F4F6;
+}
