ajuste estilos menu corporativo

--- a/web/libs/webarch/webarch.css
+++ b/web/libs/webarch/webarch.css
@@ -10187,3 +10187,10 @@ label {cursor:pointer;}
 .user-profile img {
     border: 3px solid #F2F4F6;
 }
+
+.btn.btn-default.btn-xs.menu_corporativo{background-color: #ececec;}
+.btn.btn-default.btn-xs.menu_corporativo .fa {color:#367FA9;}
+
+span.fancytree-active span.fancytree-title {
+    background-color: initial !important;
+}
