--- a/web/css/multiportal/main.css
+++ b/web/css/multiportal/main.css
@@ -549,3 +549,12 @@ button.company-bgcolor-2:hover, a.company-bgcolor-2:hover {
     margin-top: 120px;
   }
 }
+
+.portal-container {
+    height: 100%;
+    left: 0;
+    margin: 0;
+    padding: 0;
+    position: relative;
+    padding: 100px 26px 50px 26px;
+}
