Data table visualizacion

--- a/web/css/intranet.css
+++ b/web/css/intranet.css
@@ -142,3 +142,11 @@ ul.cbp_tmtimeline > li > div.cbp_tmlabel img {
 .redactor-placeholder::after {
     top: 5px !important;
 }
+
+/*div.dataTables_length select {
+    padding: 7px;
+}*/
+
+.data-tables-group {
+    background-color: #bcbcbc;
+}
