--- a/web/libs/webarch/webarch.css
+++ b/web/libs/webarch/webarch.css
@@ -53,11 +53,11 @@ Generated From LESS
 }
 html {
   font-size: 100%;
-  height: 100%;
+  min-height: 100%;
 }
 body {
   direction: ltr;
-  background-color: #1b1e24;
+  /*background-color: #1b1e24;*/
   color: #6f7b8a;
   font-family: 'Arial';
   font-size: 13px;
@@ -66,7 +66,7 @@ body {
   line-height: 1.5;
   font-style: normal;
   font-weight: normal;
-  height: 100%;
+  min-height: 100%;
 }
 body.condense-menu .header-seperation {
   display: none;
