Ajustes polanco 1 -Se quita fondo de lineas de tiempo -Se reduce tamaño de lineas de tiempo -Si hay muchas lineas de tiempo, sale carrusel para reocorrer todas las lineas de tiempo -Se quitan espacios innecesarios en el encabezado de cada linea de tiempo -Se cambian estilos en la descripcion de la linea de tiempo -En menu corporativo se agrega opcion para visualizar link relacionado -Opcion para que en links de menuportales, menucoporativo y modulos internos tipo html se pueda incluir la cedula -Se aumenta restriccion para cargar documentos en editor HTML a 5MB -Visualizacion de datatable -titulos contenidos internos HTML. Se dejan H1 y se visualiza el titulo y no la descripcion -titulos de grupos de modulos. Solo mostrar titulo del grupo -Separacion de submenu (padding-left) -Visualizar url en listado de modulos internos

--- a/web/css/intranet.css
+++ b/web/css/intranet.css
@@ -145,3 +145,23 @@ ul.cbp_tmtimeline > li > div.cbp_tmlabel img {
 .data-tables-group {
     background-color: #bcbcbc;
 }
+
+table.table.dataTable > thead{
+    background-color: #585858;
+    color: #ffffff
+}
+
+table.table.table-striped.table-bordered > thead > tr > th{
+    color: #0d638f !important;
+}
+
+.time-line-description{
+    background-color: #ecf0f2;
+    display: block;
+    font-style: italic;
+    margin-bottom: 10px;
+    margin-top: -10px;
+    padding: 10px 15px;
+    text-align: center;
+    border-radius: 15px 100px;
+}
