cambio de imagenes

--- a/web/css/portales-main.css
+++ b/web/css/portales-main.css
@@ -361,12 +361,12 @@ ul.list{ list-style-image: url("../../web/img/multiportal/tarjetamas/check.png")
 
 /* END CUSTOM INTERNAL */
 
-/* COMPANY COLOR 1 */
+/* COMPANY COLOR 1 (tarjeta más) */
 .company-bgcolor-1 {
-  background-color: #c00000;
+  background-color: #CD242A;
 }
 button.company-bgcolor-1:hover, a.company-bgcolor-1:hover {
-  background-color: #AA0000 !important;
+  background-color: #EF4637 !important;
 }
 .company-color-1 {
   color: #c00000 !important;
@@ -623,20 +623,21 @@ button.company-bgcolor-2:hover, a.company-bgcolor-2:hover {
    border-left:5px solid #fff;
 }
 .submenu.sub-tarjetamas li:hover{
-   background-color: #a50606; 
+   background-color: #EF4637; 
 }
 .tarjeta-mas .nav li a:hover {
-   background-color: #a50606;
+   background-color: #EF4637;
 }
 
 .tarjeta-mas .nav li a:active {
-   background-color: #a50606;
+   background-color: #EF4637;
 }
 
 .tarjeta-mas .nav li a:focus {
-   background-color: #a50606;
+   background-color: #EF4637;
 }
 
+.default-icon.company-bgcolor-1:hover{background-color: #EF4637;}
 .default-icon .fa {
     color:#fff;
     padding: 24px 0px;
