--- a/web/css/portales-main.css
+++ b/web/css/portales-main.css
@@ -664,3 +664,10 @@ button.company-bgcolor-2:hover, a.company-bgcolor-2:hover {
 .hover-img:hover{opacity: 0.8;}
 .section-red{background-color: #CD242A;border-radius: 10px;padding:15px;height: 280px;}
 .section-red p {color:#fff;font-size: 14px;}
+
+.carousel-indicators li{border: 1px solid gray}
+.carousel-indicators .active {background-color: #CD242A;}
+
+.footer-tarjeta-mas {background-color: #D7D7D7;}
+.footer-tarjeta-mas p  {color: #5a5a5a;}
+.footer-tarjeta-mas a {color: #5a5a5a;}
