--- a/web/css/portales-main.css
+++ b/web/css/portales-main.css
@@ -91,7 +91,7 @@ ul.list{ list-style-image: url("../../web/img/multiportal/tarjetamas/check.png")
 }
 .navbar-nav > li > a {
   color: #fff;
-  padding: 30px;
+  padding: 30px 20px;
 }
 .centered {
   text-align: center;
@@ -103,7 +103,7 @@ ul.list{ list-style-image: url("../../web/img/multiportal/tarjetamas/check.png")
 /* CUSTOM HOME */
 
 .bg-parallax {
-  background-image: url("../../img/multiportal/copservir//bg.jpg");
+  background-image: url("/copservir_intranet/web/img/multiportal/copservir/parallax-home.jpg");
   height: 459px;
   width: 100%;
   background-repeat: no-repeat;
