--- a/web/libs/webarch/webarch.css
+++ b/web/libs/webarch/webarch.css
@@ -601,7 +601,7 @@ body.boxed-layout .footer-widget {
   display: block;
   margin: 0px 0px 0px 0px;
   padding: 5px 0px;
-  padding-left: 15px !important;
+  padding-left: 10px !important;
   color: #e1eaf1;
   text-decoration: none;
   text-shadow: 0 1px 1px #000;
@@ -638,13 +638,16 @@ body.boxed-layout .footer-widget {
   padding: 0px;
 }
 .page-sidebar .page-sidebar-wrapper > ul > li > ul.sub-menu > li > ul.sub-menu > li > a {
-  margin-left: 15px;
+  margin-left: 10px;
+  font-size: 11px !important;
 }
 .page-sidebar .page-sidebar-wrapper > ul > li > ul.sub-menu > li > ul.sub-menu > li > ul.sub-menu > li > a {
-  padding-left: 15px;
+  padding-left: 10px;
+  font-size: 11px !important;
 }
 .page-sidebar .page-sidebar-wrapper > ul > li > ul.sub-menu > li > ul.sub-menu > li > ul.sub-menu > li > ul.sub-menu > li > a {
-  padding-left: 15px;
+  padding-left: 10px;
+  font-size: 11px !important;
 }
 
 .page-sidebar .page-sidebar-wrapper > ul > li > ul.sub-menu li > a > .arrow:before {
