--- a/web/css/portales-main.css
+++ b/web/css/portales-main.css
@@ -3,23 +3,23 @@
 /* Padding below the footer and lighter body text */
 @font-face{ 
 	font-family: 'FontAwesome';
-	src: url('../../web/libs/fonts/FontAwesome/fonts/FontAwesome.eot');
-	src: url('../../web/libs/fonts/FontAwesome/fonts/FontAwesome.woff') format('woff'),
-	     url('../../web/libs/fonts/FontAwesome/fonts/FontAwesome.ttf') format('truetype');
+	src: url('../libs/fonts/FontAwesome/fonts/FontAwesome.eot');
+	src: url('../libs/fonts/FontAwesome/fonts/FontAwesome.woff') format('woff'),
+	     url('../libs/fonts/FontAwesome/fonts/FontAwesome.ttf') format('truetype');
 }
 
 @font-face{ 
 	font-family: 'Questa sans';
-	src: url('../../web/libs/fonts/questa_Sans/Questa_Sans_Regular-webfont.eot');
-	src: url('../../web/libs/fonts/questa_Sans/Questa_Sans_Regular-webfont.woff') format('woff'),
-	     url('../../web/libs/fonts/questa_Sans/Questa_Sans_Regular-webfont.ttf') format('truetype');
+	src: url('../libs/fonts/questa_Sans/Questa_Sans_Regular-webfont.eot');
+	src: url('../libs/fonts/questa_Sans/Questa_Sans_Regular-webfont.woff') format('woff'),
+	     url('../libs/fonts/questa_Sans/Questa_Sans_Regular-webfont.ttf') format('truetype');
 }
 
 @font-face{ 
 	font-family: 'Century gothic';
-	src: url('../../web/libs/fonts/gothic/gothic.eot');
-	src: url('../../web/libs/fonts/gothic/gothic.woff') format('woff'),
-	     url('../../web/libs/fonts/gothic/gothic.ttf') format('truetype');
+	src: url('../libs/fonts/gothic/gothic.eot');
+	src: url('../libs/fonts/gothic/gothic.woff') format('woff'),
+	     url('../libs/fonts/gothic/gothic.ttf') format('truetype');
 }
 
 body {
@@ -38,7 +38,7 @@ body, h4, h5, h6, p, span, strong, a {
     font-family: "Century gothic" !important;
 }
 
-ul.list{ list-style-image: url("../../web/img/multiportal/tarjetamas/check.png"); }
+ul.list{ list-style-image: url("../img/multiportal/tarjetamas/check.png"); }
 
 .list li {margin-bottom: 10px;}
 
@@ -103,7 +103,7 @@ ul.list{ list-style-image: url("../../web/img/multiportal/tarjetamas/check.png")
 /* CUSTOM HOME */
 
 .bg-parallax {
-  background-image: url("/copservir_intranet/web/img/multiportal/copservir/parallax-home.jpg");
+  background-image: url("../img/multiportal/copservir/parallax-home.jpg");
   height: 459px;
   width: 100%;
   background-repeat: no-repeat;
@@ -237,7 +237,7 @@ ul.list{ list-style-image: url("../../web/img/multiportal/tarjetamas/check.png")
   padding: 20px 0;
 }
 .footer-top.footer-copservir {
-  background-image:url("/copservir_intranet/web/img/multiportal/copservir/footer.jpg");
+  background-image:url("../img/multiportal/copservir/footer.jpg");
 }
 .footer-top h3 {
   color: #fff;
